# Future-Risk-Radar

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  Makefile  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-drafter.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  0001_initial_schema.py
backend/scripts/: publish_validation_artifacts.py  summarize_locust_report.py
backend/src/frr/: __init__.py  config.py  exceptions.py  logging.py  main.py
backend/src/frr/api/: alerts.py  audit.py  auth.py  cesi.py  deps.py  explainability.py  features.py  health.py  monitoring.py  nlp.py  organizations.py  regions.py  reports.py  schemas.py  signals.py  training.py  websocket.py
backend/src/frr/db/: __init__.py  models.py  seed.py  session.py
backend/src/frr/ingestion/: __init__.py  base.py  persist.py  runner.py
backend/src/frr/ingestion/sources/: __init__.py  acled.py  eia.py  entsoe.py  epo.py  fred.py  freightos.py  gdelt.py  news_nlp.py  nsf.py  sipri.py  ucdp.py  uncomtrade.py  unhcr.py  uspto.py  wipo.py  wto.py
backend/src/frr/middleware/: audit.py
backend/src/frr/models/: __init__.py  anomaly.py  bayesian.py  explainability.py  gat.py  lstm.py  propagation.py  training.py
backend/src/frr/scoring/: __init__.py  backtest.py  engine.py
backend/src/frr/services/: __init__.py  alerting.py  cache.py  feature_store.py  monitoring.py  reports.py  scheduler.py
backend/tests/: __init__.py  conftest.py  test_anomaly.py  test_api_health.py  test_config.py  test_exceptions.py  test_fred_source.py  test_ingestion.py  test_integration.py  test_ml_models.py  test_models.py  test_schemas.py  test_scoring.py
backend/tests/load/: locustfile.py
data/: historical_crisis_labels.csv  init-timescaledb.sql  phase3-migration.sql
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite-env.d.ts  vite.config.ts
frontend/e2e/: auth-redirect.spec.ts  login-dashboard.spec.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/__tests__/: setup.ts
frontend/src/api/: client.ts
frontend/src/components/: AlertToast.tsx  CESIPanel.tsx  Header.tsx  (+8 more)
infra/prometheus/: prometheus.yml
(+26 files in other folders)
