[project]
name = "future-risk-radar"
version = "0.3.0"
description = "Predictive global risk intelligence platform — structural stress detection system"
requires-python = ">=3.12"
license = "AGPL-3.0-only"
authors = [{ name = "FRR Team" }]
readme = "../README.md"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",

    # Cache & messaging
    "redis[hiredis]>=5.2",

    # ML core
    "torch>=2.5",
    "jax[cpu]>=0.4.38",
    "numpyro>=0.16",

    # GNN
    "torch-geometric>=2.7.0",

    # Data processing
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.14",
    "scikit-learn>=1.6",
    "pyarrow>=18.0",

    # Scheduling
    "apscheduler>=3.10",

    # HTTP clients
    "httpx>=0.27",
    "aiohttp>=3.11",

    # WebSocket
    "websockets>=13.0",

    # Explainability
    "shap>=0.46",

    # Model registry
    "mlflow>=2.19",

    # Object storage
    "boto3>=1.35",

    # Monitoring
    "prometheus-client>=0.21",

    # Auth
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",

    # PDF report generation
    "jinja2>=3.1",
    "weasyprint>=62.0",

    # Email
    "aiosmtplib>=3.0",

    # Utilities
    "orjson>=3.10",
    "python-dotenv>=1.0",
    "structlog>=24.4",
    "tenacity>=9.0",
]

[project.scripts]
frr = "frr.main:cli"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
    "factory-boy>=3.3",
    "respx>=0.22",
    "locust>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frr"]

[project.optional-dependencies]
nlp = ["transformers>=4.45", "tokenizers>=0.20"]

# ── Tool Configuration ─────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["frr"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]
